--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-GOOGLE_API_KEY=AIzaSyDCEXugJAcAsZIYzeqU4PgJD9tmdZgyukc
-FIRECRAWL_API_KEY=fc-81086b76cd9842a2b13ee2b0e3a9a222
+GOOGLE_API_KEY=
+FIRECRAWL_API_KEY=
